--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "detect-port": "^1.5.1",
     "supabase": "^1.44.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
