--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "tw": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
     "types:generate": "npx supabase gen types typescript --local > ./src/database.types.ts",
+    "sb:restart": "npx supabase stop && npx supabase start",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
